--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: greenyellow;
+    background-image: url(img.jpg);
 
 }
 .content{
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,13 +17,10 @@
 }
 h2{
     color: white;
-}
-p{
     text-align: center;
-    color: red;
-
 }
-h3{
+.format{
     text-align: center;
-    color: red;
+    color:#eee;
+    line-height: 2;
 }
